feat: employee form save
added form control, saveEmployee function

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "table": "git+https://github.com/CindyJEAN/table.git",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,16 +26,9 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
