--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "table": "git+https://github.com/CindyJEAN/table.git",
+    "table-plugin": "github:CindyJEAN/table-plugin",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
