--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wealth-health",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
